--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     compile files('src/main/resources/axon-configuration-0.0.1.jar')
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
